--- a/src/asset/styles/music/uncaged/uncagedemotional.css
+++ b/src/asset/styles/music/uncaged/uncagedemotional.css
@@ -1,5 +1,6 @@
+
 /* Global content wrapper */
-.content-wrapper-vibrant {
+.content-wrapper-emotional {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -7,26 +8,26 @@
   }
   
   /* Center content at the top */
-  .center-content-vibrant {
+  .center-content-emotional {
     text-align: center;
     margin-bottom: 3rem;
   }
   
-  .center-content-vibrant h2 {
+  .center-content-emotional h2 {
     font-size: 3.5rem;
     color: transparent;
     margin-bottom: 1rem;
     width: 90%;
-    -webkit-text-stroke: 2px #50a584;
+    -webkit-text-stroke: 2px #685BC7;
   }
   
-  .center-content-vibrant p {
+  .center-content-emotional p {
     font-size: 1.2rem;
     color: #555;
   }
   
   /* Split container with margin */
-  .split-container-vibrant {
+  .split-container-emotional {
     display: flex;
     justify-content: space-around;
     margin: 3rem 8rem;
@@ -34,37 +35,37 @@
   }
   
   /* Left and right split styles */
-  .split-left-vibrant,
-  .split-right-vibrant {
+  .split-left-emotional,
+  .split-right-emotional {
     flex: 1;
   }
   
-  .split-left-vibrant {
+  .split-left-emotional {
     display: flex;
     justify-content: space-around;
     align-items: center;
     padding-right: 2rem;
   }
   
-  .split-left-vibrant img {
+  .split-left-emotional img {
     width: 70%;
     height: auto;
     object-fit: cover;
     cursor: pointer;
   }
   
-  .split-right-vibrant {
+  .split-right-emotional {
     padding-left: 2rem;
   }
   
-  .split-right-vibrant h1 {
+  .split-right-emotional h1 {
     font-size: 3rem;
     margin-bottom: 1rem;
-    color: #50a584;
+    color: #685BC7;
   
   }
   
-  .split-right-vibrant p {
+  .split-right-emotional p {
     font-size: 1.7rem;
     line-height: 1.6;
     margin-bottom: 1.5rem;
@@ -76,9 +77,9 @@
     color: black;
   }
   
-  .split-right-vibrant button {
+  .split-right-emotional button {
     padding: 0.8rem 1.5rem;
-    background-color: #3d8069;
+    background-color: #685BC7;
     border: none;
     color: white;
     font-size: 1rem;
@@ -87,7 +88,7 @@
     transition: background-color 0.3s ease;
   }
   
-  .split-right-vibrant button:hover {
+  .split-right-emotional button:hover {
     background-color: black;
   }
   
@@ -95,45 +96,45 @@
   
   /* For medium devices */
   @media (max-width: 1024px) {
-    .split-container-vibrant {
+    .split-container-emotional {
       flex-direction: column;
       margin: 3rem 5rem;
     }
   
-    .split-left-vibrant,
-    .split-right-vibrant {
+    .split-left-emotional,
+    .split-right-emotional {
       padding: 1rem 0;
       text-align: center;
     }
   
-    .split-left-vibrant img {
+    .split-left-emotional img {
       width: 80%;
     }
   
-    .split-right-vibrant {
+    .split-right-emotional {
       padding: 0;
     }
   }
   
   /* For small devices */
   @media (max-width: 768px) {
-    .split-container-vibrant {
+    .split-container-emotional {
       margin: 2rem 2rem;
     }
   
-    .split-left-vibrant img {
+    .split-left-emotional img {
       width: 100%;
     }
   
-    .split-right-vibrant h1 {
+    .split-right-emotional h1 {
       font-size: 1.8rem;
     }
   
-    .split-right-vibrant p {
+    .split-right-emotional p {
       font-size: 1rem;
     }
   
-    .split-right-vibrant button {
+    .split-right-emotional button {
       font-size: 0.9rem;
       padding: 0.7rem 1.2rem;
     }
@@ -141,47 +142,48 @@
   
   /* For extra small devices */
   @media (max-width: 480px) {
-    .content-wrapper-vibrant {
+    .content-wrapper-emotional {
       padding: 1rem;
     }
   
-    .center-content-vibrant {
+    .center-content-emotional {
       margin: 1rem;
       text-align: left;
       margin-bottom: 0;
     }
   
-    .center-content-vibrant h2 {
+    .center-content-emotional h2 {
       font-size: 2rem;
     }
   
-    .center-content-vibrant p {
+    .center-content-emotional p {
       font-size: 1rem;
     }
   
-    .split-container-vibrant {
+    .split-container-emotional {
       margin: 1.5rem 1rem;
   
     }
   
-    .split-left-vibrant img {
+    .split-left-emotional img {
       width: 100%;
     }
   
-    .split-right-vibrant {
+    .split-right-emotional {
       text-align: left;
     }
   
-    .split-right-vibrant h1 {
+    .split-right-emotional h1 {
       font-size: 1.5rem;
     }
   
-    .split-right-vibrant p {
+    .split-right-emotional p {
       font-size: 0.9rem;
     }
   
-    .split-right-vibrant button {
+    .split-right-emotional button {
       font-size: 0.8rem;
       padding: 0.6rem 1rem;
     }
   }
+  
