--- a/src/asset/styles/newspage/newspagefeaturednewssection.css
+++ b/src/asset/styles/newspage/newspagefeaturednewssection.css
@@ -3,7 +3,7 @@
     max-width: 1150px;
     margin: 0 auto;
     padding: 5rem 0;
-    background-color: black;
+    background-color: #383838;
   }
   
   /* Section Title */
